--- a/templates/index.html
+++ b/templates/index.html
@@ -18,20 +18,8 @@
       </div>
       <!-- Login Form -->
       <form action="/login" method="POST">
-        <input
-          type="text"
-          id="login"
-          class="fadeIn second"
-          name="email"
-          placeholder="Email"
-        />
-        <input
-          type="password"
-          id="password"
-          class="fadeIn third"
-          name="password"
-          placeholder="Contraseña"
-        />
+        <input type="text" id="login" class="fadeIn second" name="email" placeholder="Email" />
+        <input type="password" id="password" class="fadeIn third" name="password" placeholder="Contraseña" />
         <input type="submit" class="fadeIn fourth" value="Iniciar" />
       </form>
 
