--- a/static/css/login.css
+++ b/static/css/login.css
@@ -16,6 +16,7 @@ h2 {
 }
 
 /* STRUCTURE */
+
 .wrapper {
   display: flex;
   align-items: center;
@@ -62,9 +63,7 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type="button"],
-input[type="submit"],
-input[type="reset"] {
+input[type="button"], input[type="submit"], input[type="reset"] {
   background-color: #56baed;
   border: none;
   color: white;
@@ -86,15 +85,11 @@ input[type="reset"] {
   transition: all 0.3s ease-in-out;
 }
 
-input[type="button"]:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover {
+input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hover {
   background-color: #428bca;
 }
 
-input[type="button"]:active,
-input[type="submit"]:active,
-input[type="reset"]:active {
+input[type="button"]:active, input[type="submit"]:active, input[type="reset"]:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
