--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -26,36 +26,27 @@
             <!-- Login Form -->
             <form action="/add_event" method="POST" id="myForm">
               <!--  <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" /> -->
-              {{ lista | safe }}
-              <select name="color">
-                <option value="#ff0000">Rojo</option>
-                <option value="#00ff00">Verde</option>
-                <option value="#ffff00">Amarillo</option>
-                <option value="#81d6fe">Azul</option>
-              </select>
-              <input
-                type="datetime-local"
-                id="login"
-                class="fadeIn second"
-                name="start"
-              />
-              <input
-                type="datetime-local"
-                id="login"
-                class="fadeIn third"
-                name="end"
-              />
+              <select name='title' id=''>
+                {{ lista | safe }}
+                <select name="color">
+                  <option value="#ff0000">Rojo</option>
+                  <option value="#00ff00">Verde</option>
+                  <option value="#ffff00">Amarillo</option>
+                  <option value="#81d6fe">Azul</option>
+                </select>
+                <input type="datetime-local" id="login" class="fadeIn second" name="start" />
+                <input type="datetime-local" id="login" class="fadeIn third" name="end" />
 
-              <label for="input-2">Reglas de Repetición </label> <br />
-              <input id="input-2" type="checkbox" />
-              <!--  <div class="custom-control custom-checkbox my-1 mr-sm-2 align-self-start">
+                <label for="input-2">Reglas de Repetición </label> <br />
+                <input id="input-2" type="checkbox" />
+                <!--  <div class="custom-control custom-checkbox my-1 mr-sm-2 align-self-start">
                 <input type="checkbox" class="custom-control-input" id="customControlInline">
                 <label class="custom-control-label" for="customControlInline">Reglas de Repetición</label>
               </div>-->
 
-              <p id="myDIV">Checkbox is CHECKED!</p>
+                <p id="myDIV">Checkbox is CHECKED!</p>
 
-              <input type="submit" class="fadeIn fourth" value="Guardar" />
+                <input type="submit" class="fadeIn fourth" value="Guardar" />
             </form>
           </div>
         </div>
@@ -65,34 +56,18 @@
 </div>
 
 <!-- Button trigger modal -->
-<button
-  type="button"
-  class="btn btn-danger"
-  data-toggle="modal"
-  data-target="#borradoModal"
->
+<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#borradoModal">
   Borrado masivo
 </button>
 
 <!-- Modal de Borrado -->
-<div
-  class="modal fade"
-  id="borradoModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="borradoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title" id="borradoTitulo">Borrador de eventos</h3>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -102,12 +77,11 @@
           <option value="" disabled selected>Seleccione tipo de borrado</option>
           <option value="full">Calendario entero</option>
           <option value="day">Día entero</option>
-          <option value="user">Todos los eventos de un usuario</option
-          ><option value="conv"
-            >Todos los eventos de un usuario en un día</option
-          > </select
-        ><br />
-        <div id="usrS">Usuario : {{ lista | safe }} <br /></div>
+          <option value="user">Todos los eventos de un usuario</option>
+          <option value="conv">Todos los eventos de un usuario en un día</option>
+        </select><br />
+
+        <div id="usrS"> Usuario : <select name='title' id='usuarioBorrado'>{{ lista | safe }} <br /></div>
         <div id="fchS">Fecha: <input type="date" id="fechaBorrado" /></div>
       </div>
 
@@ -115,48 +89,34 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">
           Cancelar
         </button>
-        <button
-          type="button"
-          id="borradoBTN"
-          class="btn btn-danger"
-          onclick="borradoItem()"
-        >
+        <button type="button" id="borradoBTN" class="btn btn-danger">
           Borrar
         </button>
+
       </div>
     </div>
   </div>
 </div>
 
 <!-- Modal -->
-<div
-  class="modal fade"
-  id="exampleModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="tituloEvento">Editar Evento</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
       <div class="modal-body">
         ID : <input type="text" id="idEvento" name="idEvento" /> Usuario :
-        {{ lista | safe }} <br />
-        Inicio: <input type="text" id="inicioEvento" name="inicioEvento" /> Fin:
-        <input type="datetime" id="finEvento" name="finEvento" /> Color:
-        <input type="color" id="colorEvento" name="colorEvento" /><br />
+        <select name='title1' id=''>
+          {{ lista | safe }} <br />
+          Inicio: <input type="text" id="inicioEvento" name="inicioEvento" /> Fin:
+          <input type="datetime" id="finEvento" name="finEvento" /> Color:
+          <input type="color" id="colorEvento" name="colorEvento" /><br />
       </div>
 
       <div class="modal-footer">
@@ -170,6 +130,8 @@
           Guardar cambios
         </button>
       </div>
+
+
     </div>
   </div>
 </div>
@@ -185,13 +147,10 @@
 <script src="../static/js/calendar/list.js"></script>
 <script src="../static/js/calendar/rrule.js"></script>
 <script src="../static/js/calendar/es.js"></script>
-<script
-  src="../static/js/bootstrap-checkbox-1.5.0/dist/js/bootstrap-checkbox.js"
-  defer
-></script>
+<script src="../static/js/bootstrap-checkbox-1.5.0/dist/js/bootstrap-checkbox.js" defer></script>
 
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("DOMContentLoaded", function () {
     var x = document.getElementById("myDIV");
     x.style.display = "none";
     $(":checkbox")
@@ -199,7 +158,7 @@
         offLabel: "No",
         onLabel: "Sí"
       })
-      .on("change", function() {
+      .on("change", function () {
         if (x.style.display === "none") {
           x.style.display = "block";
         } else {
@@ -231,7 +190,7 @@
       },
       events: { url: "data" },
 
-      eventClick: function(info, jsEvent, view) {
+      eventClick: function (info, jsEvent, view) {
         //H
         $("#tituloEvento").html(info.event.title);
         // Mostrar información de evento en los inputs
@@ -248,7 +207,7 @@
         $("#inicioEvento").val(start);
 
         $("#exampleModal").modal();
-        $("#btnBorrar").click(function() {
+        $("#btnBorrar").click(function () {
           borrar(id);
         });
         /*
@@ -286,7 +245,7 @@
           {
             canvas_data: JSON.stringify(id)
           },
-          function(err, req, resp) {
+          function (err, req, resp) {
             window.location.href = "/results/" + resp["responseJSON"];
           }
         );
@@ -299,77 +258,109 @@
   });
 </script>
 <script>
-  var fchS = document.getElementById("fchS");
-  fchS.style.display = "none";
-  var usrS = document.getElementById("usrS");
-  usrS.style.display = "none";
-  var select = document.getElementById("tipoBorrado");
-  var borradoB = document.getElementById("#borradoBTN");
-  var selectedOption;
+  window.onload = function () {
+    var fchS = document.getElementById("fchS");
+    fchS.style.display = "none";
+    var usrS = document.getElementById("usrS");
+    usrS.style.display = "none";
+    var select = document.getElementById("tipoBorrado");
+    var selectedOption;
+    var usrSelected;
+    document.getElementById("borradoBTN").addEventListener("click", myFunction);
+    var usr = document.getElementById("usuarioBorrado");
+    var obj = 0;
+    var date;
+    var idBorrado = 0;
+    select.addEventListener("change", function () {
+      selectedOption = this.options[select.selectedIndex];
+      console.log(selectedOption.value);
+      if (selectedOption.value == "full") {
+        fchS.style.display = "none";
+        usrS.style.display = "none";
+      }
+      if (selectedOption.value == "day") {
+        fchS.style.display = "block";
+        usrS.style.display = "none";
+      }
+      if (selectedOption.value == "user") {
+        fchS.style.display = "none";
+        usrS.style.display = "block";
+      }
+      if (selectedOption.value == "conv") {
+        fchS.style.display = "block";
+        usrS.style.display = "block";
+      }
+    });
 
-  select.addEventListener("change", function() {
-    selectedOption = this.options[select.selectedIndex];
-    console.log(selectedOption.value);
-    if (selectedOption.value == "full") {
-      fchS.style.display = "none";
-      usrS.style.display = "none";
-    }
-    if (selectedOption.value == "day") {
-      fchS.style.display = "block";
-      usrS.style.display = "none";
-    }
-    if (selectedOption.value == "user") {
-      fchS.style.display = "none";
-      usrS.style.display = "block";
-    }
-    if (selectedOption.value == "conv") {
-      fchS.style.display = "block";
-      usrS.style.display = "block";
-    }
-  });
-  function borradoItem() {
-    select = document.getElementById("tipoBorrado");
-    selectedOption = this.options[select.selectedIndex];
-    if (selectedOption.value == "day") {
-      var fch = document.getElementById("fechaBorrado");
-      var obj = 0;
-      var date = fch.value;
-      var ds = confirm(date);
-    }
-    if (selectedOption.value == "user") {
-      var usr = document.getElementById("usuarioBorrado");
-      var usrSelected = this.options[usr.selectedIndex];
-      var obj = usrSelected.value;
-      var date = 0;
-      var ds = confirm(obj);
-    }
-    if (selectedOption.value == "conv") {
-      var fch = document.getElementById("fechaBorrado");
-      var usr = document.getElementById("usuarioBorrado");
-      date = fch.value;
-      obj = usr.value;
-      var ds = confirm(obj);
-      var ds = confirm(date);
-    }
-    borrado(selectedOption.value, date, obj);
-  }
-  function borrado(valor, date, obj) {
-    var opcion = confirm("¿está seguro de borrar lo seleccionado?");
+    usr.addEventListener("change", function () {
+      usrSelected = this.options[usr.selectedIndex];
+      console.log("El usuario seleccionado a borrar es" + usrSelected);
 
-    if (opcion == true) {
-      $.post(
-        "/deletAlgo",
-        {
-          canvas_data: JSON.stringify(valor)
-        },
-        function(err, req, resp) {
-          window.location.href = "/results/" + resp["responseJSON"];
+    });
+    function myFunction() {
+      borradoItem()
+      console.log("Hola " + selectedOption.value + "Fin");
+    }
+
+
+    function borradoItem() {
+
+      var fch = document.getElementById("fechaBorrado");
+      console.log("Hola " + selectedOption.value + "Fin");
+      if (selectedOption.value == "day") {
+
+        obj = 0;
+        date = fch.value;
+        console.log(obj);
+        console.log(date);
+        idBorrado = 1;
+      }
+      if (selectedOption.value == "user") {
+
+        obj = usrSelected.value;
+        date = 0;
+        console.log(obj);
+        console.log(date);
+        idBorrado = 2;
+      }
+      if (selectedOption.value == "conv") {
+
+        date = fch.value;
+        obj = usr.value;
+        console.log(obj);
+        console.log(date);
+        idBorrado = 3;
+      }
+      borrado(idBorrado, date, obj);
+    }
+    function borrado(valor, date, obj) {
+      var opcion = confirm("¿está seguro de borrar lo seleccionado?");
+
+      if (opcion == true) {
+        if (valor == 0) {
+          $.post(
+            "/deletFull",
+            {
+              canvas_data: JSON.stringify(valor)
+            },
+            function (err, req, resp) {
+              window.location.href = "/results/" + resp["responseJSON"];
+            }
+          );
         }
-      );
-      window.location.href = "/calendar";
-    } else {
+
+        window.location.href = "/calendar";
+      } else {
+      }
     }
   }
 </script>
 
+<script>
+
+
+
+
+
+</script>
 {% endblock %}
