--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -352,7 +352,7 @@
           }
         }
         if (valor == 1) {
-          var men = confirm("Se borrará TODOS los eventos que comiecen y terminen en el  día seleccionado ¿Está seguro/a de querer continuar?");
+          var men = confirm("Se borrará TODOS los eventos que comiecen en el día seleccionado ¿Está seguro/a de querer continuar?");
           if (men == true) {
             $.post(
               "/deletDay",
