--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -26,25 +26,43 @@
             <!-- Login Form -->
             <form action="/add_event" method="POST" id="myForm">
               <!--  <input type="text" id="login" class="fadeIn second" name="title" placeholder="Nombre del evento" /> -->
-              <select name='title' id=''>
+              <select name='title'>
                 {{ lista | safe }}
                 <select name="color">
+                  <option value="" selected disabled hidden>Seleccione un color</option>
                   <option value="#ff0000">Rojo</option>
                   <option value="#00ff00">Verde</option>
                   <option value="#ffff00">Amarillo</option>
                   <option value="#81d6fe">Azul</option>
                 </select>
-                <input type="datetime-local" id="login" class="fadeIn second" name="start" />
-                <input type="datetime-local" id="login" class="fadeIn third" name="end" />
+                <label for="login-1">
+                  Seleccione Fecha de inicio
+                </label> <br />
+                <input type="datetime-local" id="login-1" class="fadeIn second" name="start" />
 
-                <label for="input-2">Reglas de Repetición </label> <br />
-                <input id="input-2" type="checkbox" />
+                <label for="input-2">
+                  Seleccione Método de fin
+                </label> <br />
+
+                <input id="input-2" type="checkbox" data-off-active-cls="btn-warning"
+                  data-on-active-cls="btn-primary" />
+
+
+                <input type="datetime-local" id="login-2" class="fadeIn " name="end" />
+
+
+
                 <!--  <div class="custom-control custom-checkbox my-1 mr-sm-2 align-self-start">
                 <input type="checkbox" class="custom-control-input" id="customControlInline">
                 <label class="custom-control-label" for="customControlInline">Reglas de Repetición</label>
               </div>-->
 
-                <p id="myDIV">Checkbox is CHECKED!</p>
+                <div id="myDIV" class="w-25" style=" white-space:nowrap;"><label for="horas">Horas:</label>
+
+                  <input type="number" id="horas" name="horas" min="0">
+                  <label for="minutos">Minutos:</label>
+
+                  <input type="number" id="minutos" name="minutos" min="0" max="59"></div>
 
                 <input type="submit" class="fadeIn fourth" value="Guardar" />
             </form>
@@ -74,15 +92,17 @@
 
       <div class="modal-body">
         <select id="tipoBorrado">
-          <option value="" disabled selected>Seleccione tipo de borrado</option>
+          <option value="" selected disabled hidden>Seleccione tipo de borrado</option>
           <option value="full">Calendario entero</option>
           <option value="day">Día entero</option>
           <option value="user">Todos los eventos de un usuario</option>
           <option value="conv">Todos los eventos de un usuario en un día</option>
         </select><br />
 
-        <div id="usrS"> Usuario : <select name='title' id='usuarioBorrado'>{{ lista | safe }} <br /></div>
-        <div id="fchS">Fecha: <input type="date" id="fechaBorrado" /></div>
+        <div id="usrS"><select name='title' id='usuarioBorrado'>
+            {{ lista | safe }} <br />
+        </div>
+        <div id="fchS"><input type="date" id="fechaBorrado" /></div>
       </div>
 
       <div class="modal-footer">
@@ -98,7 +118,7 @@
   </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal de Selección-->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -111,7 +131,7 @@
       </div>
 
       <div class="modal-body">
-        ID : <input type="text" id="idEvento" name="idEvento" /> Usuario :
+        ID : <input type="text" id="idEvento" name="idEvento" />
         <select name='title1' id=''>
           {{ lista | safe }} <br />
           Inicio: <input type="text" id="inicioEvento" name="inicioEvento" /> Fin:
@@ -152,17 +172,21 @@
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     var x = document.getElementById("myDIV");
+    var y = document.getElementById("login-2");
     x.style.display = "none";
+    y.style.display = "block";
     $(":checkbox")
       .checkboxpicker({
-        offLabel: "No",
-        onLabel: "Sí"
+        onLabel: "Duración",
+        offLabel: "Fecha Exacta"
       })
       .on("change", function () {
         if (x.style.display === "none") {
           x.style.display = "block";
+          y.style.display = "none";
         } else {
           x.style.display = "none";
+          y.style.display = "block";
         }
       });
 
