--- a/static/css/login.css
+++ b/static/css/login.css
@@ -23,7 +23,7 @@ h2 {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   padding: 20px;
 }
 
@@ -34,6 +34,7 @@ h2 {
   padding: 30px;
   width: 90%;
   max-width: 450px;
+
   position: relative;
   padding: 0px;
   -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
@@ -63,7 +64,9 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type="button"], input[type="submit"], input[type="reset"] {
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
   background-color: #56baed;
   border: none;
   color: white;
@@ -85,11 +88,15 @@ input[type="button"], input[type="submit"], input[type="reset"] {
   transition: all 0.3s ease-in-out;
 }
 
-input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hover {
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover {
   background-color: #428bca;
 }
 
-input[type="button"]:active, input[type="submit"]:active, input[type="reset"]:active {
+input[type="button"]:active,
+input[type="submit"]:active,
+input[type="reset"]:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
