--- a/templates/main.html
+++ b/templates/main.html
@@ -9,34 +9,25 @@
     </div>
   </div>
   {% endif %}
-
 </div>
 
-<div class="row ustify-content-center justify-content-md-start  ">
+<div class="row ">
   <!-- Izquierda -->
 
   <!-- Centro -->
-  <div class="col-xs-6 col-md-7 colorPrueba fadeIn first">centtro</div>
+  <div class="colorPrueba fadeIn first mx-auto align-self-start">centtro</div>
   <!-- Derecha -->
-  <div class="col-auto col-md-2 fadeIn second">
-    <img src="..." class="card-img-top" alt="..." />
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
-    </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Cras justo odio</li>
-      <li class="list-group-item">Dapibus ac facilisis in</li>
-      <li class="list-group-item">Vestibulum at eros</li>
-    </ul>
-    <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
-    </div>
-  </div>
+  {{ agenda | safe }}
 </div>
+
+{% endblock %} {% block script %}
+<script>
+  window.onload = function() {
+    // Set variable to current date and time const
+    now = new Date(); // View the output now;
+
+    console.log(now);
+  };
+</script>
 
 {% endblock %}
